[package]
name = "clickhouse_rs_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse = "0.12.0"
tokio = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.106", features = ["derive"] }